--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="/Users/admin/Desktop/LESSON/Progate/public/Estore.png">
+          <img class="logo" src="public/estore_logo_b.webp">
         </div>
         <div class="header-right">
           <a href="#" class="login">ログイン</a>
@@ -78,7 +78,6 @@
     </div>
     <footer>
       <div class="container">
-        <!-- <img src="https://prog-8.com/images/html/advanced/footer_logo.png"> -->
         <p>Learn to code, learn to be creative.</p>
       </div>
     </footer>
